# FileGeronimo

./: README.md  meson.build
data/: fgeronimo.gresource.xml  meson.build
data/schemas/: com.github.keke712.fgeronimo.gschema.xml
data/scss/: context.scss  main.scss  meson.build
data/ui/: ContextMenu.blp  FileExplorer.blp  Settings.blp
src/: ActionHistory.vala  App.vala  EventListener.vala  FileExplorer.vala  Settings.vala  meson.build
src/Utils/: ContextMenu.vala  Daemon.vala  FileActions.vala  FileMonitor.vala  FileObject.vala  Thumbnail.vala  ThumbnailCache.vala
